# docs/swagger.json
@@ -60,7 +60,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/model.Space"
+                            "$ref": "#/definitions/model.CreateSpaceResponse"
                         }
                     },
                     "400": {
@@ -275,6 +275,17 @@
                 }
             }
         },
+        "model.CreateSpaceResponse": {
+            "type": "object",
+            "properties": {
+                "name": {
+                    "type": "string"
+                },
+                "uri": {
+                    "type": "string"
+                }
+            }
+        },
         "model.Message": {
             "type": "object",
             "properties": {
@@ -291,23 +302,6 @@
                     "type": "string"
                 },
                 "spaceId": {
-                    "type": "string"
-                }
-            }
-        },
-        "model.Space": {
-            "type": "object",
-            "properties": {
-                "createdAt": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "string"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "owner": {
                     "type": "string"
                 }
             }
